# ha-ev-trip-planner

./: .env  .eslintrc.json  .github_copilot_instructions.md  .gitignore  .gitleaks.toml  .jscpd.json  .pre-commit-config.yaml  .progress.md  .pylintrc  .semgrep.yml  <MagicMock name='mock.config.path()' id='127306089029248'>.corrupt.2026-05-10T05:39:43.834886+00:00  <MagicMock name='mock.config.path()' id='128414915696288'>.corrupt.2026-05-10T05:41:08.007460+00:00  <MagicMock name='mock.config.path()' id='130707069274160'>.corrupt.2026-05-10T05:34:45.807466+00:00  <MagicMock name='mock.config.path()' id='131409843210624'>.corrupt.2026-05-10T05:42:40.485691+00:00  <MagicMock name='mock.config.path()' id='131409843223056'>.corrupt.2026-05-10T05:42:40.147535+00:00  <MagicMock name='mock.config.path()' id='134722297788608'>.corrupt.2026-05-10T05:32:05.402520+00:00  <MagicMock name='mock.config.path()' id='137421460307456'>.corrupt.2026-05-10T05:42:10.910517+00:00  <MagicMock name='mock.config.path()' id='137421464058048'>.corrupt.2026-05-10T05:42:10.329071+00:00  <MagicMock name='mock.config.path()' id='139042636789280'>.corrupt.2026-05-10T05:59:55.462651+00:00  AGENTS.md  CHANGELOG.es.md  CHANGELOG.md  CHANGELOG_UPDATES.md  CLAUDE.es.md  CLAUDE.md  CONTRIBUTING.es.md  CONTRIBUTING.md  DOC_AUDIT_REPORT.md  Dockerfile.custom  Makefile  QWEN.md  RALPH_TODO.md  README.md  RELEASE_NOTES_v0.5.16.es.md  RELEASE_NOTES_v0.5.16.md  RELEASE_NOTES_v0.5.17.es.md  RELEASE_NOTES_v0.5.17.md  RELEASE_NOTES_v0.5.9.md  ROADMAP.es.md  ROADMAP.md  (+62 more)
.claude/: settings.json
.github/: .github_copilot_instructions.md  FORUM_POST.md  MILESTONE_2_UPDATE.md  coderabbit.yml  copilot-instructions.md
.gito/: config.toml
.ralph/: IMPROVEMENTS_2026-03-20.md  backup_claude_logs_monitor.sh.original  claude_logs_monitor.sh  claude_logs_monitor.sh.backup  kill_pytest_orphans.py  ralph-loop.sh  state.json
.research/: claude-code-stops-alone-analysis.md  context-window-claude-code-third-party-providers.md  pr35_all_comments.md  pr35_code_analysis.md  pr35_docs_analysis.md  pr35_files.json  pr35_final_report.md  pr35_issue_comments.json  pr35_review_comments.json  pr35_reviews.json  pr35_test_analysis.md  restart_empty_sensor_bug.md
.serena/: project.yml
_ai/: DEBUGGING-CASE-STUDY-def_total_hours-7-6.md  IMPLEMENTATION_REVIEW.md  PORTFOLIO.md  RALPH_METHODOLOGY.md  SOLID_REFACTORING_CASE_STUDY.md  SPECKIT_SDD_FLOW_INTEGRATION_MAP.md  TDD_METHODOLOGY.md  TESTING_E2E.md  ai-development-lab.md  index.md
_bmad/: config.yaml
_bmad-output/: adversarial-review-update-vs-deletion.md  adversarial-review-vehicle-trip.md  analisis-codigo-no-cubierto-3-casos.md  edge-case-adversarial-review-final.md  edge-case-analysis-report.json  edge-case-analysis-report.md  handoff-party-mode-t32-fix.md  project-context.md  technical-research-ha-device-sensor-deletion-deep.md  technical-research-trip-deletion-flow.md  technical-research-vehicle-trip-architecture.md  test-review.md
automations/: emhass_charge_control_template.yaml
bmalph/: config.json
docs/: ANALYSIS_MILESTONE_3.2_STATUS.md  CLARIFICATION_ANSWERS_MILESTONE_3.2.md  CLAUDE_LOGS_MONITOR_USAGE.md  CODEGUIDELINESia.es.md  CODEGUIDELINESia.md  COMPLETE_USER_JOURNEY_BDD.md  COMPREHENSIVE_ANALYSIS_MILESTONE_3.1_3.2.md  DASHBOARD.md  DEBUGGING.md  DOCS_DEEP_AUDIT.md  E2E-TESTING.md  EMHASS_CURRENT_STATE.md  EMHASS_INTEGRATION.md  IMPLEMENTATION_REVIEW.md  IMPROVEMENTS_POST_MILESTONE3.md  ISSUES_CLOSED.md  ISSUES_CLOSED_MILESTONE_2.md  ISSUES_CLOSED_MILESTONE_3.md  MASTERGUIDEHOMEASSISTANT.md  MILESTONE_3_ARCHITECTURE_ANALYSIS.md  MILESTONE_3_IMPLEMENTATION_PLAN.md  MILESTONE_3_NEXT_STEPS.md  MILESTONE_3_REFINEMENT.md  MILESTONE_4_1_PLANNING.es.md  MILESTONE_4_1_PLANNING.md  MILESTONE_4_POWER_PROFILE.es.md  MILESTONE_4_POWER_PROFILE.md  NOTIFICATIONS.md  PATTERNS.md  PORTFOLIO.md  RALPH_METHODOLOGY.es.md  RALPH_METHODOLOGY.md  README.md  REGLAS_DE_NEGOCIO.md  SERVICIOS.md  SHELL_COMMAND_SETUP.md  TDD_METHODOLOGY.md  TDD_PLAN_MILESTONE_3_ANNEX.md  TESTING_E2E.md  VEHICLE_CONTROL.md  (+20 more)
gito-report/: classification.json
plans/: 012-forensic-analysis-report.md  BUG-ROOT-CAUSE-MEMORY.md  bmad-migration-plan-phase3.md  bmad-migration-plan.md  charging-planning-functional-analysis.md  e2e-ux-test-proposal-fix-sensor-deletion.md  e2e-ux01-root-cause-and-fix.md  e2e-ux01-root-cause-fix.md  fix-recurring-trip-day-offset.md  fix-trip-persistence-restart.md  john-pm-analysis-ai-dev-lab.md  langchain-docs-mcp-install-plan.md  mary-ba-analysis-ai-dev-lab.md  review-C12-datetime-tests.md  review-C2C7C8-e2e-fixes.md  review-fix-sequential-trip-charging.md  soc-aware-charging-fix-plan.md  soc-aware-charging-plan-v3.md  sprint-change-proposal-e2e-ux-tests-2026-04-22.md  test-failure-analysis-p0.md  test-failure-analysis-report.md  unified-change-plan.md  winston-architect-review-ai-dev-lab.md
report/: jscpd-report.json
scripts/: check_unregistered_survivors.py  extract_report.js  ha-onboard.sh  install-tools.sh  mutmut-stats-patched.sh  patch_mutmut_stats.py  quality-baseline.sh  quick-e2e-check.sh  run-e2e-soc.sh  run-e2e.sh  run_mutmut.py  run_playwright_test.sh  staging-init.sh  staging-reset.sh  start_ephemeral_ha.sh
specs/: .current-epic  .current-spec
staging/: configuration.yaml
test-ha/: .env  docker-compose.yml
test-results/: .last-run.json
tests/: __init__.py  conftest.py  conftest_block_ha.py  conftest_override.py  global.setup.ts  global.teardown.ts  panel.test.js  setup_entry.py  test_aggregated_sensor_bug.py  test_array_rotation_consistency.py  test_calculation_sensors.py  test_calculations.py  test_charging_window.py  test_charging_window_bug_fix.py  test_config_entry_not_ready.py  test_config_flow.py  test_config_flow_core.py  test_config_flow_issues.py  test_config_flow_milestone3.py  test_config_flow_milestone3_1_ux.py  test_config_flow_missing.py  test_config_updates.py  test_coordinator.py  test_coordinator_entity.py  test_coordinator_update.py  test_coverage_100_percent.py  test_coverage_edge_cases.py  test_coverage_remaining.py  test_dashboard.py  (+113 more)
(+1151 files in other folders)
