[project.optional-dependencies]
dev = [
    "time-machine>=2.10.0",
    "hypothesis>=6.0.0",
    "flake8-pytest-style>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.MASTER]
py-version = "3.14"
ignore = ["tests"]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "C0200",  # consider-using-enumerate: style preference, not critical
    "W0404",  # reimport: common in test files, not a real issue
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"

exclude = [
    "**/__pycache__",
    "**/.*",
    "**/tests/**",
    ".venv/**",
    "**/node_modules/**",
]

[tool.bandit]
exclude_dirs = ["/tests"]
skips = ["B101"]  # Skip assert_used warnings in tests

[tool.deptry]
extend_exclude = ["docs", "scripts"]
ignore_notebooks = true

[tool.vulture]
min_confidence = 80
exclude = ["tests/", "docs/"]
paths = ["custom_components"]

[tool.importlinter]
root_package = "custom_components.ev_trip_planner"

# Contract 1: layered architecture — services may import trip/emhass/dashboard, not vice versa
[[tool.importlinter.contracts]]
name = "layered architecture: trip/emhass/dashboard do not import services"
type = "forbidden"
source_modules = [
    "custom_components.ev_trip_planner.trip",
    "custom_components.ev_trip_planner.emhass",
    "custom_components.ev_trip_planner.dashboard",
]
forbidden_modules = ["custom_components.ev_trip_planner.services"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = "Test*"
python_functions = "test_*"
# NOTE: --cov removed from addopts because pytest-cov causes a deadlock when
# mutmut 3.x redirects stdout during in-process pytest.main() calls.
# Run coverage separately: pytest --cov=custom_components/ev_trip_planner
# import_mode=importlib set via addopts (not a standalone ini key in pytest 9)
addopts = "-v --import-mode=importlib --strict-markers --strict-config"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (require HA framework or external services)",
    "slow: tests that take significantly longer than average",
]
filterwarnings = [
    "ignore:Inheritance class.*:DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]

[tool.coverage.run]
source = ["custom_components/ev_trip_planner"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

[tool.mutmut]
# NOTE: tests_excluded_from_mutmut/ directory (2 files) remains in its current
# location. These files are NOT being moved as part of Spec 2 test reorganization.
# Their disposition — whether to integrate into tests/unit/ or tests/integration/
# or remove entirely — is deferred to Spec 5 (Mutation Ramp).
# Per AC-12.3/AC-12.4: exclusion list update not required since files are not moved.
paths_to_mutate = ["custom_components/ev_trip_planner"]
runner = "pytest"
tests_dir = ["tests/unit/", "tests/integration/"]
dict_synonyms = ["Dict", "Optional"]
timeout = 600

[tool.quality-gate.mutation]
global_kill_threshold = 0.48
fail_on_missing_module = false
increment_step = 0.01
target_final = 1.00
modules_per_sprint = 2

[tool.quality-gate.mutation.modules.calculations.core]
kill_threshold = 0.71
status = "passing"

[tool.quality-gate.mutation.modules.calculations.windows]
kill_threshold = 0.71
status = "passing"

[tool.quality-gate.mutation.modules.calculations.power]
kill_threshold = 0.71
status = "passing"

[tool.quality-gate.mutation.modules.calculations.schedule]
kill_threshold = 0.71
status = "passing"

[tool.quality-gate.mutation.modules.calculations.deficit]
kill_threshold = 0.71
status = "passing"

[tool.quality-gate.mutation.modules.utils]
kill_threshold = 0.89
status = "passing"

[tool.quality-gate.mutation.modules.definitions]
kill_threshold = 0.45
status = "passing"

[tool.quality-gate.mutation.modules.sensor]
kill_threshold = 0.38
status = "in_progress"

[tool.quality-gate.mutation.modules.presence_monitor]
kill_threshold = 0.52
status = "passing"

[tool.quality-gate.mutation.modules.trip.manager]
kill_threshold = 0.46
status = "in_progress"

[tool.quality-gate.mutation.modules.trip.crud_mixin]
kill_threshold = 0.46
status = "in_progress"

[tool.quality-gate.mutation.modules.trip.soc_mixin]
kill_threshold = 0.46
status = "in_progress"

[tool.quality-gate.mutation.modules.trip.power_profile_mixin]
kill_threshold = 0.46
status = "in_progress"

[tool.quality-gate.mutation.modules.trip.schedule_mixin]
kill_threshold = 0.46
status = "in_progress"

[tool.quality-gate.mutation.modules.emhass.adapter]
kill_threshold = 0.53
status = "passing"

[tool.quality-gate.mutation.modules.emhass.index_manager]
kill_threshold = 0.53
status = "passing"

[tool.quality-gate.mutation.modules.emhass.load_publisher]
kill_threshold = 0.53
status = "passing"

[tool.quality-gate.mutation.modules.emhass.error_handler]
kill_threshold = 0.53
status = "passing"

[tool.quality-gate.mutation.modules.emhass.cache_entry_builder]
kill_threshold = 0.53
status = "passing"

[tool.quality-gate.mutation.modules.config_flow]
kill_threshold = 0.31
status = "in_progress"

[tool.quality-gate.mutation.modules.vehicle.controller]
kill_threshold = 0.55
status = "passing"

[tool.quality-gate.mutation.modules.vehicle.strategy]
kill_threshold = 0.55
status = "passing"

[tool.quality-gate.mutation.modules.vehicle.external]
kill_threshold = 0.55
status = "passing"

[tool.quality-gate.mutation.modules.coordinator]
kill_threshold = 0.37
status = "in_progress"

[tool.quality-gate.mutation.modules.yaml_trip_storage]
kill_threshold = 0.50
status = "passing"

# Previously untracked modules — baseline thresholds set to current scores
[tool.quality-gate.mutation.modules.__init__]
kill_threshold = 0.51
status = "in_progress"

[tool.quality-gate.mutation.modules.dashboard.importer]
kill_threshold = 0.35
status = "in_progress"

[tool.quality-gate.mutation.modules.dashboard.builder]
kill_threshold = 0.35
status = "in_progress"

[tool.quality-gate.mutation.modules.dashboard.template_manager]
kill_threshold = 0.35
status = "in_progress"

[tool.quality-gate.mutation.modules.diagnostics]
kill_threshold = 0.28
status = "passing"

[tool.quality-gate.mutation.modules.panel]
kill_threshold = 0.37
status = "in_progress"

[tool.quality-gate.mutation.modules.services.handlers]
kill_threshold = 0.38
status = "in_progress"

[tool.quality-gate.mutation.modules.services._handler_factories]
kill_threshold = 0.38
status = "in_progress"

[tool.quality-gate.mutation.modules.services.cleanup]
kill_threshold = 0.38
status = "in_progress"

[tool.quality-gate.mutation.modules.services.dashboard_helpers]
kill_threshold = 0.38
status = "in_progress"

[tool.quality-gate.mutation.modules.services.presence]
kill_threshold = 0.38
status = "in_progress"

[tool.quality-gate.mutation.modules.services._lookup]
kill_threshold = 0.38
status = "in_progress"
